--- a/style.css
+++ b/style.css
@@ -47,17 +47,22 @@
   padding: 280px;
 }
 
+#summerpop {
+  padding-top: 15%;
+  padding-left: 15%;
+}
+
 #summerpop h2 {
-  font-size: 3em;
+  font-size: 3.5em;
   color: white;
   text-transform: uppercase;
   font-weight: bold;
 }
 
-.main p {
+#summerpop p {
   margin: 2px;
   padding: 30px 0;
-  font-size: 25px;
+  font-size: 30px;
   color: white;
 }
 
@@ -180,3 +185,62 @@
 }
 
 /* End of page 1 - last page */
+
+/* Start of 2nd page design */
+.secondpage {
+  position: relative;
+  background: url(/images/img13.jpg);
+  min-height: 95vh;
+  background-size: cover;
+}
+
+#pagetwo {
+  padding-top: 20px;
+  margin-left: 20px;
+  padding-top: 50px;
+  padding-left: 50px;
+}
+
+#pagetwo h2 {
+  font-size: 3.8em;
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+#pagetwo p {
+  margin: 2px;
+  padding: 30px 0;
+  font-size: 20px;
+  color: white;
+}
+
+.here {
+  text-decoration: none;
+  border-radius: 30px;
+  background: white;
+  padding: 15px 70px;
+  color: rgb(221, 97, 167);
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.here:hover {
+  color: orange;
+  outline-color: orange;
+}
+
+#tickets {
+  padding: 20% 5% 0 20%;
+}
+
+#last2nd {
+  position: relative;
+  background: url(/images/img22.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 250px;
+}
+/* End of 2nd page design */
