--- a/style.css
+++ b/style.css
@@ -13,10 +13,9 @@
   padding: 50px 0;
 }
 
-.navbar-brand {
-  font-size: 1.3em;
-  text-transform: uppercase;
-  color: #ccc limportant;
+.navbar-brand ion-icon {
+  padding-top: 14px;
+  font-size: 50px;
 }
 
 .nav-items {
@@ -41,15 +40,15 @@
 .main {
   position: relative;
   background: url(/images/img1.jpg);
-  min-height: 100vh;
+  min-height: 80vh;
   background-size: cover;
   background-position: center;
-  padding: 280px;
+  padding: 250px;
 }
 
 #summerpop {
   padding-top: 15%;
-  padding-left: 15%;
+  text-align: right;
 }
 
 #summerpop h2 {
@@ -81,27 +80,127 @@
   outline-color: orange;
 }
 
-/* Who are we Section */
-#learn {
-  position: relative;
-  background: url(/images/img3.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 500px;
+/* Objects for MainPage*/
+
+.style1 {
+  transform: rotate(90deg);
+  width: 55px;
+  height: 44px;
+  top: 6.5rem;
+  left: 37rem;
+  filter: grayscale(50%);
+  position: absolute;
 }
 
-#learn h2 {
-  padding-top: 10%;
-  font-weight: bold;
-  font-size: 2.8em;
-  padding-bottom: 4.8%;
+.style2 {
+  transform: rotate(90deg);
+  width: 55px;
+  height: 44px;
+  right: 5rem;
+  position: absolute;
 }
 
-#parag p {
-  font-size: 22px;
-  padding: 0 3%;
+.style3 {
+  transform: rotate(280deg);
+  width: 55px;
+  height: 44px;
+  left: 8rem;
+  bottom: 17rem;
+  position: absolute;
 }
+
+.style4 {
+  transform: rotate(280deg);
+  width: 55px;
+  height: 44px;
+  right: 30rem;
+  bottom: 10rem;
+  filter: grayscale(50%);
+  position: absolute;
+}
+
+.style5 {
+  transform: rotate(270deg);
+  height: 64px;
+  top: 8rem;
+  left: 68rem;
+  position: absolute;
+}
+
+.style6 {
+  transform: rotate(270deg);
+  height: 64px;
+  bottom: 4rem;
+  left: 43rem;
+  position: absolute;
+}
+
+.style7 {
+  transform: rotate(278deg);
+  height: 174px;
+  top: 8.5rem;
+  left: 36rem;
+  position: absolute;
+}
+
+.style8 {
+  transform: rotate(90deg);
+  height: 174px;
+  bottom: 6.5rem;
+  left: 58rem;
+  position: absolute;
+}
+
+.style9 {
+  transform: rotate(90deg);
+  height: 164px;
+  top: 12rem;
+  left: 13rem;
+  position: absolute;
+}
+
+.style10 {
+  transform: rotate(90deg);
+  height: 164px;
+  right: 5rem;
+  bottom: 2rem;
+  position: absolute;
+}
+
+.style11 {
+  transform: rotate(270deg);
+  height: 180px;
+  left: 12rem;
+  bottom: 10rem;
+  position: absolute;
+}
+
+.style12 {
+  transform: rotate(90deg);
+  height: 180px;
+  right: 9rem;
+  top: 9rem;
+  position: absolute;
+}
+
+.style13 {
+  transform: rotate(90deg);
+  height: 80px;
+  bottom: 12rem;
+  left: 29rem;
+  position: absolute;
+}
+
+.style14 {
+  transform: rotate(90deg);
+  height: 80px;
+  top: 15rem;
+  right: 29rem;
+  position: absolute;
+}
+
+/* End of objects for MainPage*/
+/* End of Main Section */
 
 /* 3 images/row column */
 
@@ -187,35 +286,46 @@
 /* End of page 1 - last page */
 
 /* Start of 2nd page design */
+/* Home Page */
 .secondpage {
   position: relative;
   background: url(/images/img13.jpg);
-  min-height: 95vh;
+  min-height: 100vh;
   background-size: cover;
+  padding: 50px;
+  background-size: cover;
+  background-position: center;
 }
 
-#pagetwo {
-  padding-top: 20px;
-  margin-left: 20px;
-  padding-top: 50px;
-  padding-left: 50px;
+#tickets {
+  position: relative;
 }
 
-#pagetwo h2 {
-  font-size: 3.8em;
+#tickets h2 {
+  position: absolute;
+  font-size: 3.9em;
   color: white;
   text-transform: uppercase;
   font-weight: bold;
+  top: 15rem;
+  right: -30%;
+  text-align: right;
 }
 
-#pagetwo p {
-  margin: 2px;
-  padding: 30px 0;
+#tickets p {
+  position: absolute;
+  padding-left: 8.8rem;
+  top: 26rem;
+  right: -30%;
+  text-align: right;
   font-size: 20px;
   color: white;
 }
 
 .here {
+  position: absolute;
+  top: 34rem;
+  right: -30%;
   text-decoration: none;
   border-radius: 30px;
   background: white;
@@ -231,33 +341,146 @@
   outline-color: orange;
 }
 
-#tickets {
-  padding: 20% 5% 0 20%;
-}
-
 #last2nd {
   position: relative;
   background: url(/images/img22.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 230px;
+  height: 280px;
 }
 
 #last2nd h5 {
   padding-top: 30px;
   color: white;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 #last2nd p {
-  font-size: 20px;
+  font-size: 30px;
   color: white;
 }
-/* End of 2nd page design */
 
-/* DavidJohnson */
-#davidjohnson {
-  padding: 5rem;
-  font-size: 20px;
+#last2nd .spiral1 {
+  position: absolute;
+  top: 13rem;
+  right: 20rem;
 }
+/* End of Home Page */
+
+/* Objects - 2nd Group in SecondPage */
+
+#obj {
+  position: relative;
+}
+
+.obj1 {
+  position: absolute;
+  left: 52rem;
+  top: 29rem;
+  z-index: -1;
+  height: 125px;
+  width: 220px;
+}
+
+.obj2 {
+  position: absolute;
+  transform: rotate(90deg);
+  right: 26rem;
+  z-index: -1;
+  top: 26.5rem;
+  width: 85px;
+  height: 74px;
+}
+
+.obj3 {
+  position: absolute;
+  transform: rotate(90deg);
+  right: 12rem;
+  bottom: 24rem;
+  width: 324px;
+  height: 303px;
+  z-index: -1;
+}
+
+.obj4 {
+  position: absolute;
+  transform: rotate(90deg);
+  left: 30rem;
+  top: 21.8rem;
+  z-index: -1;
+  width: 250px;
+  height: 293px;
+}
+
+.obj5 {
+  position: absolute;
+  transform: rotate(270deg);
+  left: 22.5rem;
+  bottom: 32rem;
+  width: 190px;
+  height: 353px;
+  z-index: -1;
+}
+
+/* Objects - 2nd Group in SecondPage */
+
+/* 2nd Page DavidJohnson and 1st Page WhoAreWe*/
+#sameObject {
+  padding: 10rem;
+  font-size: 20px;
+  position: relative;
+}
+
+#sameObject p {
+  padding: 0 5rem;
+}
+
+/* Objects */
+.triangle {
+  position: absolute;
+  left: 7rem;
+  top: 30px;
+}
+
+.circle {
+  position: absolute;
+  left: 16rem;
+  top: 20px;
+}
+
+.spiral {
+  position: absolute;
+  right: 10rem;
+  top: 0;
+}
+
+/* End of Objects */
+/* End of2nd Page DavidJohnson and 1st Page WhoAreWe*/
+
+/* Second Page footer */
+
+.lastsecondpage {
+  padding-top: 10%;
+  color: white;
+}
+
+ion-icon {
+  font-size: 40px;
+  color: white;
+  padding-top: 50px;
+}
+
+#socialMedia h5 {
+  padding-bottom: 30px;
+  color: white;
+  font-size: 25px;
+  text-transform: uppercase;
+}
+
+#socialMedia p {
+  font-size: 20px;
+  padding: 0 30px 0 0;
+}
+
+/* End of Second Page footer */
