--- a/style.css
+++ b/style.css
@@ -19,20 +19,19 @@
 }
 
 .nav-items {
-  font-size: 1.5em;
+  font-size: 1.3em;
   text-transform: uppercase;
   padding-left: 50px;
-  color: white;
 }
 
 .nav-link {
-  color: #ccc limportant;
+  color: black;
   letter-spacing: 2px;
   font-size: 1em;
 }
 
-#home {
-  padding-right: 800px;
+.span {
+  color: black;
 }
 
 /* Main Section */
@@ -40,9 +39,9 @@
 .main {
   position: relative;
   background: url(/images/img1.jpg);
-  min-height: 80vh;
+  min-height: 100vh;
   background-size: cover;
-  background-position: center;
+  background-position: contain;
   padding: 250px;
 }
 
@@ -122,7 +121,7 @@
 .style5 {
   transform: rotate(270deg);
   height: 64px;
-  top: 8rem;
+  top: 12rem;
   left: 68rem;
   position: absolute;
 }
@@ -487,3 +486,5 @@ ion-icon {
 }
 
 /* End of Second Page footer */
+
+/* Breakpoints */
