--- a/style.css
+++ b/style.css
@@ -1,37 +1,13 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-#header {
-  position: absolute;
-  z-index: 10;
-  width: 100%;
-}
-
-.navbar {
-  padding: 50px 0;
-}
-
-.navbar-brand ion-icon {
-  padding-top: 14px;
-  font-size: 50px;
+.masthead {
+  background-size: cover;
+  min-height: 100vh;
+  position: relative;
 }
 
 .nav-items {
   font-size: 1.3em;
   text-transform: uppercase;
   padding-left: 50px;
-}
-
-.nav-link {
-  color: black;
-  letter-spacing: 2px;
-  font-size: 1em;
-}
-
-.span {
-  color: black;
 }
 
 /* Main Section */
@@ -488,3 +464,17 @@ ion-icon {
 /* End of Second Page footer */
 
 /* Breakpoints */
+/* `md` applies to small devices (landscape phones, less than 768px) */
+@media (max-width: 768px) {
+  .masthead {
+    min-height: 30vh;
+  }
+  button .navbar-toggle {
+    size: 12px;
+  }
+
+  .nav-items {
+    font-size: 12px;
+    text-transform: uppercase;
+  }
+} ;
