--- a/style.css
+++ b/style.css
@@ -458,7 +458,7 @@ ion-icon {
 /* `md` applies to small devices (landscape phones, less than 768px) */
 @media (max-width: 768px) {
   .masthead {
-    min-height: 30vh;
+    min-height: 50vh;
   }
   button .navbar-toggle {
     size: 12px;
@@ -467,5 +467,41 @@ ion-icon {
   .nav-items {
     font-size: 12px;
     text-transform: uppercase;
+  }
+
+  /* Main Section */
+
+  #summerpop {
+    text-align: right;
+    padding-top: 10px;
+  }
+
+  #summerpop h2 {
+    font-size: 20px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  #summerpop p {
+    margin: 2px;
+    padding: 15px 0;
+    font-size: 12px;
+    color: white;
+  }
+
+  .readMore {
+    text-decoration: none;
+    outline-style: solid;
+    padding: 5px 10px;
+    color: white;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  .readMore:hover {
+    color: orange;
+    outline-color: orange;
   }
 } ;
