--- a/style.css
+++ b/style.css
@@ -432,6 +432,7 @@ ion-icon {
 /* End of Second Page footer */
 
 /* Breakpoints */
+
 /* `md` applies to small devices (landscape phones, less than 768px) */
 @media (max-width: 768px) {
   .masthead {
@@ -742,4 +743,92 @@ ion-icon {
     font-size: 18px;
     padding: 0 30px 0 0;
   }
-} ;
+}
+
+/* `lg` applies to medium devices (tablets, less than 992px) */
+@media (max-width: 992px) {
+  .masthead {
+    position: relative;
+    min-height: 100vh;
+    background-size: cover;
+  }
+  .nav-items {
+    font-size: 12px;
+    padding: 0 5px;
+    text-transform: uppercase;
+  }
+  .style1 {
+    width: 39px;
+    height: 39px;
+    top: 5.5rem;
+    left: 19rem;
+  }
+  .style6 {
+    height: 34px;
+    bottom: 7rem;
+    left: 27rem;
+  }
+  .style2 {
+    width: 31px;
+    height: 31px;
+    right: 2rem;
+    top: 10rem;
+  }
+  .style7 {
+    height: 146px;
+    top: 6.5rem;
+    left: 18rem;
+  }
+  .style8 {
+    height: 116px;
+    bottom: 8rem;
+    left: 35rem;
+  }
+  .style5 {
+    height: 41px;
+    top: 7rem;
+    left: 41rem;
+  }
+  .style3 {
+    width: 31px;
+    height: 29px;
+    left: 4rem;
+    bottom: 12rem;
+  }
+  .style11 {
+    height: 150px;
+    left: 7rem;
+    bottom: 5rem;
+  }
+  .style14 {
+    height: 61px;
+    bottom: 8rem;
+    right: 34rem;
+  }
+  .style12 {
+    height: 141px;
+    right: 4rem;
+    top: 4rem;
+  }
+  .style9 {
+    height: 115px;
+    top: 8rem;
+    left: 3rem;
+  }
+  #summerpop {
+    padding-top: 15%;
+  }
+  #summerpop h2 {
+    font-size: 2.8em;
+    color: white;
+  }
+  #summerpop p {
+    font-size: 23px;
+  }
+  .nav-items {
+    font-size: 20px;
+  }
+  .readMore {
+    padding: 10px 37px;
+  }
+}
