--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
   transform: rotate(270deg);
   height: 64px;
   top: 12rem;
-  left: 68rem;
+  right: 43rem;
   position: absolute;
 }
 
@@ -113,8 +113,8 @@
 .style8 {
   transform: rotate(90deg);
   height: 174px;
-  bottom: 5rem;
-  left: 65rem;
+  bottom: 3rem;
+  right: 43rem;
   position: absolute;
 }
 
@@ -360,16 +360,6 @@
   height: 293px;
 }
 
-.obj5 {
-  position: absolute;
-  transform: rotate(270deg);
-  left: 20.5rem;
-  bottom: 40rem;
-  width: 190px;
-  height: 353px;
-  z-index: -1;
-}
-
 /* Objects - 2nd Group in SecondPage */
 
 /* 2nd Page DavidJohnson and 1st Page WhoAreWe*/
@@ -433,11 +423,92 @@ ion-icon {
 
 /* Breakpoints */
 
+/* `sm` applies to x-small devices (portrait phones, less than 576px) */
+@media (max-width: 614px) {
+  .masthead {
+    background-size: cover;
+    position: relative;
+    min-height: 50vh;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .nav-items {
+    font-size: 15px;
+  }
+  .style1,
+  .style2,
+  .style3,
+  .style4,
+  .style6,
+  .style5,
+  .style7,
+  .style8,
+  .style9,
+  .style10,
+  .style11,
+  .style12,
+  .style13,
+  .style14 {
+    display: none;
+  }
+
+  #summerpop {
+    padding-top: 28%;
+  }
+  #summerpop h2 {
+    font-size: 1.9em;
+  }
+  #summerpop p {
+    font-size: 15px;
+  }
+
+  #last2nd p {
+    font-size: 18px;
+  }
+  #last2nd .spiral1 {
+    top: 19rem;
+    right: 1rem;
+    height: 167px;
+  }
+
+  .circle {
+    left: 4rem;
+    height: 39px;
+  }
+  .triangle {
+    top: 2rem;
+    left: 1rem;
+    height: 190px;
+    z-index: -1;
+  }
+  .spiral {
+    height: 166px;
+  }
+  #last2nd .spiral1 {
+    top: 19rem;
+    right: 1rem;
+    height: 177px;
+  }
+  #last2nd h5 {
+    padding-top: 1px;
+    font-size: 20px;
+    text-align: center;
+  }
+  #sameObject {
+    font-size: 22px;
+  }
+  .here {
+    font-size: 15px;
+    padding: 5px 40px;
+  }
+}
+/* End of @media (max-width: 576px)  */
+
 /* `md` applies to small devices (landscape phones, less than 768px) */
 @media (max-width: 768px) {
   .masthead {
     position: relative;
-    min-height: 50vh;
+    min-height: 74vh;
     background-size: cover;
   }
   .nav-items {
@@ -464,10 +535,9 @@ ion-icon {
   #summerpop p {
     margin: 2px;
     padding: 5px 0;
-    font-size: 13px;
+    font-size: 15px;
     color: white;
   }
-
   .readMore {
     text-decoration: none;
     outline-style: solid;
@@ -592,7 +662,7 @@ ion-icon {
   }
 
   #sameObject p {
-    font-size: 13px;
+    font-size: 15px;
     padding: 1rem 0;
     margin: 0;
   }
@@ -606,17 +676,27 @@ ion-icon {
   }
   .circle {
     position: absolute;
-    width: 20px;
-    height: 20px;
-    left: 5rem;
-    top: 3rem;
+    width: 43px;
+    height: 45px;
+    left: 6rem;
+    top: 2rem;
   }
   .spiral {
     position: absolute;
-    height: 80px;
+    height: 183px;
     top: 1rem;
     right: 2rem;
+    z-index: -1;
   }
+
+  /* yourtext */
+
+  .yourText {
+    padding: 10px 30px;
+    border-radius: 5rem;
+    font-size: 20px;
+  }
+
   /* page 1 - last page */
   #last {
     position: relative;
@@ -679,16 +759,6 @@ ion-icon {
     top: 66rem;
   }
 
-  .obj5 {
-    position: absolute;
-    transform: rotate(362deg);
-    right: 0;
-    bottom: 46.5rem;
-    width: 90px;
-    height: 153px;
-    z-index: -1;
-  }
-
   /* last second page */
   #last2nd {
     position: relative;
@@ -728,28 +798,24 @@ ion-icon {
 
   ion-icon {
     font-size: 25px;
-    color: white;
-    padding-bottom: 30px;
   }
 
   #socialMedia h5 {
     padding-top: 30px;
-    color: white;
-    font-size: 25px;
-    text-transform: uppercase;
+    font-size: 23px;
   }
 
   #socialMedia p {
     font-size: 18px;
-    padding: 0 30px 0 0;
   }
 }
+/* End of @media (max-width: 768px)  */
 
 /* `lg` applies to medium devices (tablets, less than 992px) */
 @media (max-width: 992px) {
   .masthead {
     position: relative;
-    min-height: 100vh;
+    min-height: 70vh;
     background-size: cover;
   }
   .nav-items {
@@ -757,78 +823,303 @@ ion-icon {
     padding: 0 5px;
     text-transform: uppercase;
   }
+  .navbar {
+    padding-top: 1.5rem;
+  }
   .style1 {
     width: 39px;
     height: 39px;
-    top: 5.5rem;
-    left: 19rem;
+    top: 4.5rem;
+    left: 15rem;
+    position: absolute;
   }
   .style6 {
     height: 34px;
-    bottom: 7rem;
-    left: 27rem;
+    bottom: 5rem;
+    left: 22rem;
+    position: absolute;
   }
   .style2 {
     width: 31px;
     height: 31px;
     right: 2rem;
     top: 10rem;
+    position: absolute;
+  }
+  .style4 {
+    width: 37px;
+    height: 35px;
+    right: 17rem;
+    bottom: 3rem;
+    position: absolute;
   }
   .style7 {
-    height: 146px;
-    top: 6.5rem;
-    left: 18rem;
+    height: 132px;
+    top: 4.5rem;
+    left: 14rem;
+    position: absolute;
   }
   .style8 {
-    height: 116px;
+    height: 113px;
     bottom: 8rem;
-    left: 35rem;
+    left: 31rem;
+    position: absolute;
   }
   .style5 {
-    height: 41px;
-    top: 7rem;
-    left: 41rem;
+    height: 37px;
+    top: 6rem;
+    left: 34rem;
+    position: absolute;
   }
   .style3 {
     width: 31px;
     height: 29px;
     left: 4rem;
     bottom: 12rem;
+    position: absolute;
   }
+
   .style11 {
     height: 150px;
     left: 7rem;
     bottom: 5rem;
+    position: absolute;
   }
-  .style14 {
-    height: 61px;
-    bottom: 8rem;
-    right: 34rem;
+  .style14,
+  .style13,
+  .style10 {
+    display: none;
   }
+
   .style12 {
     height: 141px;
     right: 4rem;
     top: 4rem;
+    position: absolute;
   }
   .style9 {
     height: 115px;
     top: 8rem;
     left: 3rem;
+    position: absolute;
   }
   #summerpop {
-    padding-top: 15%;
+    padding-top: 20%;
   }
   #summerpop h2 {
     font-size: 2.8em;
     color: white;
   }
   #summerpop p {
-    font-size: 23px;
+    font-size: 20px;
   }
   .nav-items {
     font-size: 20px;
   }
   .readMore {
     padding: 10px 37px;
+  }
+
+  #obj h3 {
+    font-size: 23px;
+  }
+  #obj p {
+    font-size: 18px;
+  }
+
+  #sameObject {
+    padding: 4rem;
+  }
+  .triangle {
+    height: 225px;
+    z-index: -1;
+    left: 2rem;
+  }
+  .circle {
+    position: absolute;
+    left: 6rem;
+    height: 48px;
+  }
+
+  .spiral {
+    position: absolute;
+    right: 0rem;
+    top: 0;
+    height: 200px;
+  }
+
+  .yourText {
+    padding: 10px 30px;
+  }
+
+  /*2nd Page */
+  #last {
+    position: relative;
+    background: url(/images/img22.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 500px;
+  }
+
+  .secondpage {
+    position: relative;
+    min-height: 49vh;
+  }
+  #last2nd {
+    position: relative;
+    background: url(/images/img22.jpg);
+    height: 350px;
+  }
+
+  #last2nd h5 {
+    padding-top: 45px;
+    font-size: 26px;
+  }
+  #last2nd p {
+    font-size: 20px;
+  }
+  #last2nd .spiral1 {
+    position: absolute;
+    top: 13rem;
+    right: 3rem;
+    height: 230px;
+  }
+
+  p {
+    font-size: 23px;
+  }
+  .h5,
+  h5 {
+    font-size: 26px;
+  }
+}
+
+/* `xl` applies to large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) {
+  .navbar {
+    padding-top: 2.5rem;
+  }
+  .style1 {
+    width: 40px;
+    height: 44px;
+    top: 6.5rem;
+    left: 23rem;
+  }
+  .style2 {
+    width: 28px;
+    height: 29px;
+    right: 2rem;
+    top: 10rem;
+  }
+  .style3 {
+    width: 38px;
+    height: 42px;
+    left: 5rem;
+    bottom: 17rem;
+  }
+  .style4 {
+    width: 39px;
+    height: 38px;
+    right: 15rem;
+    bottom: 7rem;
+  }
+
+  .style5 {
+    height: 43px;
+    top: 9rem;
+    right: 21rem;
+    position: absolute;
+  }
+  .style6 {
+    height: 44px;
+    bottom: 8rem;
+    left: 32rem;
+  }
+  .style7 {
+    height: 163px;
+    top: 7.5rem;
+    left: 23rem;
+  }
+  .style8 {
+    height: 124px;
+    bottom: 11rem;
+    right: 25rem;
+  }
+  .style9 {
+    height: 128px;
+    top: 3rem;
+    left: 3rem;
+  }
+  .style10 {
+    height: 109px;
+    right: 3rem;
+    bottom: 2rem;
+  }
+  .style11 {
+    height: 160px;
+    left: 8rem;
+    bottom: 11rem;
+  }
+  .style12 {
+    height: 149px;
+    right: 4rem;
+    top: 4rem;
+  }
+  .style13 {
+    height: 64px;
+    bottom: 13rem;
+    left: 20rem;
+  }
+  .style14 {
+    height: 56px;
+    top: 10rem;
+    right: 10rem;
+  }
+  #summerpop p {
+    font-size: 23px;
+  }
+  .spiral {
+    right: 6rem;
+  }
+  #last2nd .spiral1 {
+    position: absolute;
+    top: 13rem;
+    right: 4rem;
+  }
+  .triangle {
+    left: 2rem;
+    height: 300px;
+  }
+  .circle {
+    left: 9rem;
+    height: 60px;
+  }
+  .yourText {
+    padding: 10px 33px;
+  }
+  #lastPage {
+    padding-top: 16%;
+  }
+
+  #obj p {
+    font-size: 20px;
+    text-align: center;
+  }
+  #last2nd p {
+    font-size: 20px;
+    text-align: center;
+  }
+  #last2nd h5 {
+    padding-top: 51px;
+    font-size: 28px;
+    text-align: center;
+  }
+  #sameObject {
+    padding: 7rem;
+    font-size: 20px;
+  }
+  #sameObject h5 {
+    font-size: 28px;
   }
 }
