--- a/style.css
+++ b/style.css
@@ -619,14 +619,6 @@ ion-icon {
     position: absolute;
   }
 
-  .style9 {
-    transform: rotate(90deg);
-    height: 60px;
-    top: 4rem;
-    left: 1rem;
-    position: absolute;
-  }
-
   .style11 {
     transform: rotate(270deg);
     height: 80px;
@@ -646,6 +638,7 @@ ion-icon {
   .style12,
   .style2,
   .style14,
+  .style9,
   .style10 {
     display: none;
   }
