--- a/style.css
+++ b/style.css
@@ -266,7 +266,6 @@
   min-height: 100vh;
   background-size: cover;
   padding: 50px;
-  background-size: cover;
   background-position: center;
 }
 
@@ -544,13 +543,6 @@ ion-icon {
 
 /* `md` applies to small devices (landscape phones, less than 768px) */
 @media (max-width: 768px) {
-  .masthead {
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
-    min-height: 70vh;
-  }
-
   .nav-items {
     font-size: 15px;
     text-transform: uppercase;
@@ -1014,79 +1006,130 @@ ion-icon {
   .navbar {
     padding-top: 2.5rem;
   }
+
+  #summerpop {
+    padding-top: 15%;
+    text-align: right;
+  }
+
   .style1 {
+    transform: rotate(90deg);
     width: 40px;
     height: 44px;
     top: 6.5rem;
-    left: 23rem;
+    left: 21rem;
+    filter: grayscale(50%);
+    position: absolute;
   }
+
   .style2 {
-    width: 28px;
-    height: 29px;
+    transform: rotate(90deg);
+    width: 40px;
+    height: 44px;
     right: 2rem;
     top: 10rem;
+    position: absolute;
   }
+
   .style3 {
-    width: 38px;
-    height: 42px;
+    transform: rotate(280deg);
+    width: 40px;
+    height: 44px;
     left: 5rem;
-    bottom: 17rem;
+    bottom: 10rem;
+    position: absolute;
   }
+
   .style4 {
-    width: 39px;
-    height: 38px;
-    right: 15rem;
-    bottom: 7rem;
+    transform: rotate(280deg);
+    width: 40px;
+    height: 44px;
+    right: 26rem;
+    bottom: 3rem;
+    filter: grayscale(50%);
+    position: absolute;
   }
 
   .style5 {
+    transform: rotate(270deg);
     height: 43px;
-    top: 9rem;
-    right: 21rem;
+    top: 7.5rem;
+    right: 27rem;
     position: absolute;
   }
+
   .style6 {
+    transform: rotate(270deg);
     height: 44px;
     bottom: 8rem;
-    left: 32rem;
+    left: 27.5rem;
+    position: absolute;
   }
+
   .style7 {
+    transform: rotate(278deg);
     height: 163px;
-    top: 7.5rem;
-    left: 23rem;
+    top: 6rem;
+    left: 19.5rem;
+    position: absolute;
   }
+
   .style8 {
+    transform: rotate(90deg);
     height: 124px;
-    bottom: 11rem;
-    right: 25rem;
+    bottom: 8rem;
+    right: 29rem;
+    position: absolute;
+  }
+
+  .style9 {
+    transform: rotate(90deg);
+    height: 140px;
+    top: 5rem;
+    left: 4rem;
+    position: absolute;
   }
 
   .style10 {
+    transform: rotate(90deg);
     height: 109px;
     right: 3rem;
     bottom: 2rem;
+    position: absolute;
   }
+
   .style11 {
+    transform: rotate(270deg);
     height: 160px;
     left: 8rem;
-    bottom: 11rem;
+    bottom: 5rem;
+    position: absolute;
   }
+
   .style12 {
+    transform: rotate(90deg);
     height: 149px;
     right: 4rem;
     top: 4rem;
-  }
-  .style13 {
-    height: 64px;
-    bottom: 13rem;
-    left: 20rem;
-  }
-  .style14 {
-    height: 56px;
-    top: 10rem;
-    right: 10rem;
+    position: absolute;
   }
 
+  .style13 {
+    transform: rotate(90deg);
+    height: 60px;
+    bottom: 7rem;
+    left: 17rem;
+    position: absolute;
+  }
+
+  .style14 {
+    transform: rotate(90deg);
+    z-index: 1;
+    height: 50px;
+    top: 9rem;
+    right: 18rem;
+    position: absolute;
+  }
   .spiral {
     position: absolute;
     right: 1rem;
